2016-02-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/qtterminal/qt_term.h src/qtterminal/qt_conversion.cpp:  isnan()
	is in namespace std.

	* src/win/wtext.h:  Avoid warnings about the re-definition of
	popen/pclose with fake pipe support using MSYS2/Mingw-w64.

	* src/wxterminal/wxt_gui.cpp|h:  Fixes to make the wxt terminal work
	with wxWidgets 3 on Windows:
	1) Disable wxWidgets debug assertions in release builds. This does 
	not solve the problem with a setlocale(LC_ALL, NULL) == "C" test in 
	wxLocale, but at least gets rid of the warning.
	2) Flush the cairo surface before blitting the internal bitmap to
	screen.

	* src/win/wgraph.c:  Include direct.h for _chdir().

	* term/tkcanvas.trm (TK_init):  TK_image requires WRITE_PNG_IMAGE to be
	defined.

2016-02-12  Jun Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* term/tkcanvas.trm:  More fixes suggested by clang warning messages.

2016-02-11  Anton Gladky <gladk@debian.org>

	* term/tkcanvas.trm:  Replace statements of the form 
	fprintf(gpoutfile, string) because they trigger a compiler warning/error
	with  -Werror=format-security.

2016-02-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/wxterminal/wxt_gui.cpp (wxt_raise_window):  On Windows, only
	Restore() the window if it is iconized.  Fixes accidental resize of
	maximized windows.

	* term/tkcanvas.trm (TK_vector):  Fix for vector commands without
	preceeding move as e.g. in "with line lc variable".

	* src/fit.c:  Fix order of using specs printed to log-file.
	Bug #1657

2016-02-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stats.c: Reset data input mode to 2D at start of stats command.
	This produces consistent results for "stats FOO matrix", even if the
	previous command was "splot".
	Bug #1739

2016-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/version.c PATCHLEVEL configure.in docs/titlepag.tex:
	Update patchlevel to 5.0.3

2016-02-04  <gbmiquel@users.sf.net>
